--- a/src/css/style.css
+++ b/src/css/style.css
@@ -209,9 +209,10 @@ body {
 ========= */
 .hero {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  width: 100%;
   color: var(--white);
   text-align: center;
-  padding: 2rem;
+  padding: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -223,6 +224,7 @@ body {
   line-height: 100%;
   letter-spacing: -1.5%;
   text-transform: uppercase;
+  margin-top: 5rem;
 }
 .hero__title {
   font-size: var(--fs-4xl);
@@ -253,6 +255,21 @@ body {
   scale: 1.1;
 }
 
+.hero__text {
+  font-size: var(--fs-3xl);
+  font-weight: var(--fw-light);
+  margin-top: 10rem;
+  margin-bottom: 1rem;
+  line-height: 84px;
+  letter-spacing: -1.5%;
+  text-align: start;
+  align-self: flex-start;
+}
+.hero__text span {
+  font-family: var(--font-tertiary);
+  font-weight: var(--fw-regular);
+  font-style: italic;
+}
 /* ======
    Footer
 ========= */
