--- a/src/css/style.css
+++ b/src/css/style.css
@@ -183,6 +183,7 @@ body {
     width: 100%;
     background: var(--white);
     display: none;
+    padding: 1rem 2rem;
   }
 
   .nav__items[data-opened="true"] {
@@ -232,7 +233,7 @@ body {
 .hero__title {
   font-size: var(--fs-4xl);
   font-weight: var(--fw-bold);
-  margin-bottom: 1rem;
+  margin-bottom: 10rem;
   line-height: 100%;
   letter-spacing: -1.5%;
   text-transform: uppercase;
@@ -262,7 +263,7 @@ body {
   max-width: 710px;
   font-size: var(--fs-3xl);
   font-weight: var(--fw-light);
-  margin-top: 10rem;
+  margin-top: 5rem;
   margin-bottom: 1rem;
   line-height: 84px;
   letter-spacing: -1.5%;
@@ -275,6 +276,26 @@ body {
   font-style: italic;
 }
 
+@media (max-width: 768px) {
+  .hero__text {
+    font-size: var(--fs-2xl);
+    line-height: 50px;
+  }
+}
+@media (max-width: 480px) {
+  .hero {
+    padding: 4rem 1rem;
+  }
+  .hero__title {
+    font-size: var(--fs-2xl);
+  }
+  .hero__text {
+    font-size: var(--fs-lg);
+    font-size: var(--fs-lg);
+    line-height: 40px;
+  }
+}
+
 /* ======
    Industry
 ========= */
@@ -284,6 +305,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: start;
+  flex-wrap: nowrap;
   gap: 4rem;
 }
 .industry__title-container {
@@ -393,7 +415,43 @@ body {
   color: var(--primary-950);
   opacity: 0.9;
 }
+@media (max-width: 768px) {
+  .industry {
+    flex-wrap: wrap;
+    justify-content: end;
+  }
+  .industry__title-container {
+    width: 100%;
+  }
+  .industry__services-container {
+    width: 70%;
+  }
+  .industry__services-heading {
+    text-align: end;
+  }
+  .industry__overview {
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .industry {
+    justify-content: start;
+    padding: 4rem 2rem;
+  }
+  .industry__services-container {
+    width: 100%;
+  }
+  .industry__services-heading {
+    text-align: start;
+  }
+  .industry__overview-text {
+    font-size: var(--fs-xs);
+  }
+}
 
+/* ======
+   Challenges
+========= */
 .challenges {
   display: flex;
   justify-content: space-between;
@@ -473,6 +531,38 @@ body {
   color: var(--primary-950);
   opacity: 0.8;
 }
+@media (max-width: 768px) {
+  .challenges {
+    flex-wrap: wrap;
+    justify-content: start;
+  }
+  .challenges__title-container {
+    width: 100%;
+  }
+  .challenges_items {
+    width: auto;
+  }
+}
+@media (max-width: 480px) {
+  .challenges {
+    padding: 4rem 2rem;
+  }
+  .challenges__title-container {
+    width: 100%;
+  }
+  .challenges__text {
+    font-size: var(--fs-sm);
+  }
+  .challenges_items {
+    width: 100%;
+  }
+  .challenges_item-title {
+    font-size: var(--fs-md);
+  }
+  .challenges_item-body {
+    font-size: var(--fs-xs);
+  }
+}
 
 /* ======
    Branding
@@ -526,6 +616,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  gap: 1rem;
   padding: 4rem 3rem;
 }
 .branding div {
@@ -534,6 +625,41 @@ body {
   background-color: var(--gray-300);
 }
 
+@media (max-width: 768px) {
+  .approach {
+    padding: 4rem 3rem;
+  }
+  .approach__block-text {
+    margin-bottom: 2rem;
+  }
+  .branding {
+    padding: 4rem 3rem;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 480px) {
+  .approach {
+    padding: 4rem 1rem;
+  }
+  .approach__title {
+    margin-bottom: 2rem;
+  }
+  .approach__block-title {
+    font-size: var(--fs-lg);
+  }
+  .approach__block-text {
+    font-size: var(--fs-xs);
+    margin-bottom: 2rem;
+  }
+  .branding {
+    padding: 4rem 0;
+    flex-direction: column;
+  }
+  .branding div {
+    width: 100%;
+  }
+}
 /* ======
    Footer
 ========= */
