--- a/src/css/style.css
+++ b/src/css/style.css
@@ -825,6 +825,57 @@ body {
 }
 
 /* ======
+   Social Media
+========= */
+.social-media {
+  padding: 0.5rem 0 0.5rem 4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.social-media__block {
+  width: 40%;
+}
+.social-media__title {
+  font-weight: var(--fw-semibold);
+  font-size: 44px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: var(--primary-950);
+  margin-bottom: 1rem;
+}
+.social-media__text {
+  font-family: var(--font-secondary);
+  font-size: 18px;
+  line-height: 150%;
+  letter-spacing: -1.5%;
+  color: var(--primary-950);
+  opacity: 0.8;
+}
+.social-media__image img {
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+@media (max-width: 1120px) {
+  .social-media {
+    flex-direction: column;
+    align-items: end;
+  }
+  .social-media__block {
+    width: 100%;
+    align-self: flex-start;
+    padding-right: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .social-media {
+    padding: 0.5rem 0rem 0.5rem 1rem;
+  }
+}
+
+/* ======
    Footer
 ========= */
 .footer {
