--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1390,6 +1390,33 @@ body {
   }
 }
 
+/* =====
+   Conclusion
+========= */
+.conclusion {
+  padding: 4rem 3rem;
+  text-align: center;
+  background-color: #00a859;
+}
+.conclusion__text {
+  font-weight: var(--fw-semibold);
+  font-size: 48px;
+  max-width: 800px;
+  color: var(--white);
+  margin: 2rem auto;
+  line-height: 100%;
+  letter-spacing: -1.5%;
+  text-align: center;
+}
+@media (max-width: 480px) {
+  .conclusion {
+    padding: 4rem 1rem;
+  }
+  .conclusion__text {
+    font-size: var(--fs-xl);
+  }
+}
+
 /* ======
    Footer
 ========= */
