- Added footer section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1487,8 +1487,131 @@ body {
    Footer
 ========= */
 .footer {
-  background-color: var(--primary);
-  color: var(--white);
+  background-color: var(--white);
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 4rem;
+}
+.footer__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+.footer__left {
+  max-width: 300px;
+  text-align: start;
+}
+.footer__left img {
+  width: 200px;
+  object-fit: contain;
+  object-position: center;
+}
+.footer__left figcaption {
+  font-family: var(--font-secondary);
+  font-weight: var(--fw-light);
+  font-size: var(--fs-xs);
+  line-height: 150%;
+  letter-spacing: -0.5%;
+  color: var(--primary-950);
+  opacity: 0.9;
+  margin-top: 1rem;
+}
+.footer__right {
+  list-style-type: none;
+  text-align: end;
+}
+.footer__right a {
+  text-decoration: none;
+  color: var(--primary-950);
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-md);
+  line-height: 100%;
+  letter-spacing: 0.25%;
+  transition: color 0.3s ease;
+}
+
+.footer__right a:hover {
+  color: var(--primary);
+}
+
+.footer hr {
+  width: 100%;
+  margin: 2rem auto;
+  background-color: var(--primary-950);
+  height: 1px;
+  border: none;
+}
+
+.footer__info-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 2rem;
+}
+.footer__info-left,
+.footer__info-right {
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  list-style-type: none;
+  gap: 1rem;
+}
+.footer__info-left li {
+  max-width: 300px;
+}
+.footer__info-left a,
+.footer__info-right a {
+  text-decoration: none;
+  font-family: var(--font-tertiary);
+  font-size: var(--fs-xs);
+  line-height: 100%;
+  letter-spacing: 0.5%;
+  color: var(--primary-950);
+  transition: color 0.3s ease;
+}
+
+.footer__text {
+  margin-top: 2rem;
+  font-family: var(--font-secondary);
+  font-size: var(--fs-3xs);
+  line-height: 100%;
+  letter-spacing: 0.5%;
+  color: #c3c3c3;
+}
+.footer__text a {
+  text-decoration: none;
+  color: #c3c3c3;
+}
+.footer__text a:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .footer__info-left {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 480px) {
+  .footer {
+    padding: 1rem;
+  }
+  .footer__left {
+    text-align: center;
+    max-width: unset;
+  }
+  .footer__block {
+    flex-direction: column;
+  }
+  .footer__right {
+    text-align: center;
+  }
+  .footer__info-block {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__info-left {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
 }
